fixed line wraping

--- a/src/app/common/modals/component/request-reply-dlg/request-reply-dlg.component.scss
+++ b/src/app/common/modals/component/request-reply-dlg/request-reply-dlg.component.scss
@@ -46,6 +46,7 @@ dialog-header-app {
 	textarea {
 		height: 90px;
 		resize: none;
+		white-space: pre-line;
 	}
 }
 
