--- a/src/app/common/modals/component/review-request-reply-dlg/review-request-reply-dlg.component.scss
+++ b/src/app/common/modals/component/review-request-reply-dlg/review-request-reply-dlg.component.scss
@@ -32,6 +32,12 @@ dialog-footer-app {
 	width: 100%;
 }
 
+.reply-message {
+	color: var(--color-txt-strong);
+	white-space: pre-line;
+	max-width: 686px;
+}
+
 article {
 	margin: var(--spacing-l) 0;
 
